# calcmcp

./: .dockerignore  Dockerfile  README.md  environment.yml  install.ps1  pyproject.toml
.claude/: claude_desktop_config.json
.mcp/catalog/: custom-catalog.yaml
.mcp/catalog/v3/tools/: calcmcp.json
src/calc_mcp_server/: server.py
