[project]
name = "calcmcp"
version = "0.0.1"
description = "A tiny MCP server which exposes add and subtract tools"
authors = [{name = "RectangleEquals", email = "RectangleEquals@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["mcp[cli]>=1.3.0"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"